# ibark

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cicd.yaml
src/: macros.rs  main.rs  util.rs
src/core/: app.rs  bark.rs  cli.rs  cmd.rs  conf.rs  healthz.rs  info.rs  misc.rs  mod.rs  ping.rs  send.rs
