[package]
name = "ibark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
config = { version = "0.13", default-features = false, features = [
    "ini",
    "json",
    "json5",
    "toml",
    "yaml"
] }
directories = "5"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"

# See more at https://github.com/johnthagen/min-sized-rust
[profile.release]
#codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
